- notice message is now shown at the top of the login box if the user already has a TGC - added style and icon for 'notice' messages - trailing ? and &'s in service URLs are now handled better (no more appending unnecessary &'s)

--- a/lib/themes/cas.css
+++ b/lib/themes/cas.css
@@ -110,3 +110,11 @@ div.confirmation {
 	background-position: 10px 5px;
 	font-weight: bold;
 }
+
+div.notice {
+	color: #04c;
+	background-image: url(notice.png);
+	background-repeat: no-repeat;
+	background-position: 10px 5px;
+	font-weight: bold;
+}
